--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.vincent198725.boltexponativewind"
     },
     "web": {
       "bundler": "metro",
